// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https:localhost/cualquiercosa"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> Debe de renderizar adecuadamente 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
